--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -5,7 +5,7 @@
 }
 
 .title {
-    font-family: 'Grotesque' 'sans-serif';
+    font-family: 'Darker Grotesque', sans-serif;
     font-weight: 900;
 }
 .description{
