--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -11,3 +11,16 @@
 .description{
     line-height: 2.5rem;
 }
+
+/* .border-2 {
+    border:2px solid;
+    border-image: linear-gradient(#D6CCA4, #3d8361)30;
+} */
+/* .gradient {
+    border: 1px solid transparent; 
+    border-radius: 16px; 
+    overflow: hidden; 
+    background: #002b23; 
+    background-image: linear-gradient(to top, #001e18, transparent); 
+} */
+  
