--- a/src/components/Brand/Brand.css
+++ b/src/components/Brand/Brand.css
@@ -1,18 +1,14 @@
-.glow {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #fff;
-    box-shadow:
-      0 0 60px 30px #fff,  /* inner white */
-      0 0 100px 60px #f0f, /*middle magenta*/
-      0 0 140px 90px #0ff; /* outer cyan */
-}
+/* .shadows {
+    box-shadow: 30px 0 30px -10px #3D8361, -12px 0 8px -10px #3D8361,0px -10px 10px #3D8361;
+} */
 
 .hoverText {
     color: #EDF1E4;
     transition: color 0.3s ease-in;
 }
 
+.imgs {
+    transition: color .3s ease-in-out;
+}
 
 
