--- a/src/components/Brand/Brand.css
+++ b/src/components/Brand/Brand.css
@@ -1,6 +1,7 @@
 /* .shadows {
-    box-shadow: 30px 0 30px -10px #3D8361, -12px 0 8px -10px #3D8361,0px -10px 10px #3D8361;
+    box-shadow: 0 10px 40px 2px #002b23, 0 -9px 50px 0px #3d8361, 12px 0 15px -4px #3d8361, -12px 0 15px -4px #3d8361;
 } */
+
 
 .hoverText {
     color: #EDF1E4;
@@ -11,4 +12,17 @@
     transition: color .3s ease-in-out;
 }
 
+.outlines-border {
+    border-radius: 16px;
+    border: 2px solid;
+    border-image:linear-gradient(#d3caa2bc, transparent) 30;
+}
 
+.fade-in-element {
+    opacity: 0;
+    transition: opacity 4s ease-in-out;
+}
+
+.fade-in {
+    opacity: 2;
+}
