--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,3 @@
-/* .navbar {
-    box-shadow:;
-} */
-
-.btn {
-    font-family: 'DM Sans', sans-serif;
+.navbar {
+    box-shadow: 0 0px 20px 10px #28282873;
 }
