--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ body{
     font-family: 'Darker Grotesque', sans-serif;
     font-weight: 700;
 }
+
+.btn {
+    font-family: 'DM Sans', sans-serif;
+}
