--- a/src/components/Brand/Brand.css
+++ b/src/components/Brand/Brand.css
@@ -4,8 +4,13 @@
 
 
 .hoverText {
-    color: #EDF1E4;
     transition: color 0.3s ease-in;
+}
+
+.text {
+    font-family: 'Darker Grotesque', sans-serif;
+    font-weight: 900;
+    letter-spacing: -3px;
 }
 
 .imgs {
