--- a/src/components/CodecampsList/codecampsList.css
+++ b/src/components/CodecampsList/codecampsList.css
@@ -59,9 +59,12 @@
   
   
 .samllbox {
-    background: linear-gradient(180deg, #001B16 0%, #001B16 100%),
-    linear-gradient(180deg, #EDF1E4 -101.67%, rgba(237, 241, 228, 0) 131.67%);
-    @apply mt-2 w-7 h-7 md:w-8 md:h-8 top-20 left-20 mb-3 border-2  border-gray-400 rounded-lg overflow-hidden;
+    /* background: linear-gradient(180deg, #001B16 0%, #001b16 100%), */
+    /* linear-gradient(180deg, #EDF1E4 -101.67%, rgba(237, 241, 228, 0) 131.67%); */
+    background: linear-gradient(180deg, #001b1600 0%, #001b1600 100%), 
+    linear-gradient(180deg, #edf1e400 -101.67%, rgba(237, 241, 228, 0) 131.67%);
+    @apply mt-2 w-7 h-7 md:w-8 md:h-8 top-20 left-20 mb-3 border-2  border-transparent rounded-lg overflow-hidden;  
+    /* //border-gray-400// */
 }
   
 .textStyle{
